# projeto_ohmimetro_embarcatech

./: CMakeLists.txt  main.c  readme.md
inc/: font.h
src/: main.c  ssd1306.c
